BUG - last line in some messages is not visible in "reply" mode

--- a/styles/desktop/compose.less
+++ b/styles/desktop/compose.less
@@ -221,7 +221,7 @@
 	.html_editor {
 		//margin-left: 11px;
 		//margin-right: 11px;
-		padding: 0px 11px;
+		padding: 0px 11px 21px 11px;
 		display: flex;
 		flex-direction: column;
 		flex-wrap: nowrap;
